--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="results">
           
           <!-- handlebars template -->
-          <script id="track-template" type="text/x-handlebars-template">
+          <script id="tracks-template" type="text/x-handlebars-template">
             {{#each tracks}}
             <div class="row">
               <div class="col-xs-4">
@@ -58,11 +58,11 @@
   <!-- jquery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-  <!-- handlebars -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
-
   <!-- bootstrap js -->
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!-- handlebars -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
 
   <!-- custom script -->
   <script type="text/javascript" src="scripts/app.js"></script>
