use handlebars each/else

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
               </div>
             </div>
             <hr>
+            {{else}}
+            <p class="text-center">No results</p>
             {{/each}}
           </script>
         
