--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
           <!-- handlebars template -->
           <script id="tracks-template" type="text/x-handlebars-template">
             {{#each tracks}}
-            <div class="row">
-              <div class="col-xs-4">
-                <img src="{{album.images.[0].url}}" class="img-responsive">
+              <div class="row">
+                <div class="col-xs-4">
+                  {{#if album.images.[0]}}
+                    <img src="{{album.images.[0].url}}" class="img-responsive">
+                  {{/if}}
+                </div>
+                <div class="col-xs-8">
+                  <p><strong>{{name}}</strong> by {{artists.[0].name}}</p>
+                  <p><a href="{{previewUrl}}" target="_blank" class="btn btn-sm btn-default">Preview <span class="glyphicon glyphicon-play"></span></a></p>
+                </div>
               </div>
-              <div class="col-xs-8">
-                <p><strong>{{name}}</strong> by {{artists.[0].name}}</p>
-                <p><a href="{{previewUrl}}" target="_blank" class="btn btn-sm btn-default">Preview <span class="glyphicon glyphicon-play"></span></a></p>
-              </div>
-            </div>
-            <hr>
+              <hr>
             {{else}}
-            <p class="text-center">No results</p>
+              <p class="text-center">No results</p>
             {{/each}}
           </script>
         
