--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </form>
         <div class="text-center" id="loading">
-          <img src="loading.gif" width="80">
+          <img src="images/loading.gif" width="80">
         </div>
         <br>
         <div id="results"></div>
