move files to comply with style-guide
https://github.com/SF-WDI-LABS/js-style-guide

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
   <!-- custom styles -->
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
   <title>Spotify Search</title>
 </head>
@@ -23,7 +23,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- jquery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
@@ -31,6 +31,6 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <!-- custom script -->
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
