--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           </div>
         </form>
         <div class="text-center" id="loading">
-          <img src="loading.gif" width="80">
+          <img src="images/loading.gif" width="80">
         </div>
         <br>
         <div id="results">
-          
+
           <!-- handlebars template -->
           <script id="tracks-template" type="text/x-handlebars-template">
             {{#each tracks}}
@@ -53,7 +53,7 @@
               <p class="text-center">No results</p>
             {{/each}}
           </script>
-        
+
         </div>
       </div>
     </div>
