--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <!-- bootstrap js -->
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+  
+  <!-- handlebars -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
+
   <!-- custom script -->
   <script type="text/javascript" src="scripts/app.js"></script>
 </head>
