--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <!-- custom styles -->
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jquery -->
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 
   <!-- custom script -->
-  <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 
 </head>
 <body>
