Spotify .js/.css/.html added

--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+  <!-- handlebars -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+
+
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 
 
   <script type="text/javascript" src="js/app.js"></script>
 
 <style>
-  body {
-      background-image: url("/Users/ayushjha/WDI/spotify-search/images/spotify_background.jpg");
+  /*body {
+      background-image: url("/Users/ayushjha/WDI/spotify-search/images/spotify_background.png");
       background-size:1366px 768px;
       background-repeat: no-repeat;
-}
+}*/
 </style>
 </head>
 <body>
-  }
+
     <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -39,7 +43,7 @@
             <input type="submit" class="btn btn-block btn-success" value="SEARCH">
             <div>
             <h2>
-            <img src="/Users/ayushjha/WDI/spotify-search/images/loading.gif" alt="Loading Search"  align="middle" style="width:50px;height:50px;">
+            <img src="/Users/ayushjha/WDI/spotify-search/images/spotify_logo.png" alt="Spotify Logo"  align="middle" style="width:100px;height:100px;">
             </h2>
           </div>
           </div>
