--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <!-- custom styles -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jquery -->
@@ -24,10 +25,28 @@
 </head>
 <body>
   <div class="container">
+    <div class="search">
+      <h1 class="text-center">Spotify Search</h1>
+      <form class="search-field" action="index.html" method="GET">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span><input type="text" name="q">
+        <input type="submit" name="search">
+      </form>
+      <div class="col-xs-4 col-xs-offset-4">
+        <nav aria-label="navigation" style="display: none">
+          <ul class="pager">
+            <li><a id="previous">Previous</a></li>
+            <li><a id="next">Next</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="col-xs-12">
+      <hr>
+    </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+        <div id="results">
+        </div>
       </div>
     </div>
   </div>
