finally got the api url working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+        <br>
+        <form id='spotify-search'>
+          <div class='form-section'>
+            <input class="form-control" id='track' placeholder="Song Title" autofocus>
+          </div>
+          <div class='form-section'>
+            <br>
+            <input type='submit' class='btn btn-block btn-primary' value='Search'>
+          </div>
+        </fom>
+        <div class="text-center" id="loading">
+         <img src="images/loading.gif" width="80">
+       </div>
+       <br>
+       <div id="results"></div>
       </div>
     </div>
   </div>
