successfully manipulated dom to include spotify track data

--- a/index.html
+++ b/index.html
@@ -18,18 +18,66 @@
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 
-  <!-- custom script -->
-  <script type="text/javascript" src="js/app.js"></script>
+
 
 </head>
 <body>
   <div class="container">
+
+
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
         <div id="results"></div>
       </div>
     </div>
-  </div>
+    <div class="row button text-center">
+      <input type="text">
+    </div>
+
+    <div class="row text-center">
+      <button class="col-md-6 btn-default">Search</button>
+    </div>
+
+    <!-- <div class="row result">
+      <div class="album-cover">
+        <img id="cover-1" src="images/album-placeholder.jpg" width="300px">
+      </div>
+
+      <div class="right-result">
+        <div class="song-artist">
+          <h3 id="artist-1">Artist</h3>
+          <h4 id="track-1">Track</h3>
+        </div>
+        <button id="sample-1" class="col-md-6 btn-play">Play</button>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row result">
+      <div class="album-cover">
+        <img id="cover-2" src="images/album-placeholder.jpg" width="300px">
+      </div>
+
+      <div class="right-result">
+        <div class="song-artist">
+          <h3 id="artist-1">Artist</h3>
+          <h4 id="track-1">Track</h3>
+        </div>
+        <button class="col-md-6 btn-play">Play</button>
+      </div>
+    </div>
+
+    <hr> -->
+
+
+
+
+
+  </div>  <!-- container close -->
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
+
+
 </html>
