--- a/index.html
+++ b/index.html
@@ -32,44 +32,13 @@
       </div>
     </div>
     <div class="row button text-center">
-      <input type="text">
+      <input id="enter-search" type="text">
     </div>
 
     <div class="row text-center">
-      <button class="col-md-6 btn-default">Search</button>
+      <button id="search-button" class="btn-default">Search</button>
     </div>
 
-    <!-- <div class="row result">
-      <div class="album-cover">
-        <img id="cover-1" src="images/album-placeholder.jpg" width="300px">
-      </div>
-
-      <div class="right-result">
-        <div class="song-artist">
-          <h3 id="artist-1">Artist</h3>
-          <h4 id="track-1">Track</h3>
-        </div>
-        <button id="sample-1" class="col-md-6 btn-play">Play</button>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="row result">
-      <div class="album-cover">
-        <img id="cover-2" src="images/album-placeholder.jpg" width="300px">
-      </div>
-
-      <div class="right-result">
-        <div class="song-artist">
-          <h3 id="artist-1">Artist</h3>
-          <h4 id="track-1">Track</h3>
-        </div>
-        <button class="col-md-6 btn-play">Play</button>
-      </div>
-    </div>
-
-    <hr> -->
 
 
 
