--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <div class="row col-md-6 col-md-offset-3">
+          <form type="submit">
+            <input type="text" name="search" placeholder="Search..." required>
+            <br>
+            <input class="row search-button" type="button" value="Search">
+          </form>
+        </div>
         <div id="results"></div>
       </div>
     </div>
