--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
+        <br>
+        <!-- search input form -->
         <div class="row col-md-6 col-md-offset-3">
-          <form type="submit">
-            <input type="text" name="search" placeholder="Search..." required>
+          <form id="seach-form" type="submit">
+            <input class="search-text-input center-block" placeholder="Search..." required>
             <br>
-            <input class="row search-button" type="button" value="Search">
+            <!-- search button -->
+            <input type="submit" class="row search-button btn btn-block"  value="Search">
           </form>
         </div>
         <div id="results"></div>
