fixed minor syntax, now I can console the json object

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <div id="results"></div>
       </div>
     </div>
+  <form method="GET" action="https://api.spotify.com/v1/search?q=hello&type=track">
+    <input type="text" name= "track" query=hello/>
+    <input type="submit" />
+  </form>
+
+
+
+
+
   </div>
 </body>
 </html>
