Added form with text and submit inputs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+
+        <form method="GET" action="" class="col-xs-12">
+          <label class="col-xs-12" for="song">Song Title</label>
+          <input class="col-xs-12 form-control" type="text" placeholder="I Will Always Love You" name="q">
+          <input class="col-xs-12 btn btn-success" type="submit">
+        </form>
         <div id="results"></div>
       </div>
     </div>
