--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
 
-        <form method="GET" action="" class="col-xs-12">
+        <form class="col-xs-12">
           <label class="col-xs-12" for="song">Song Title</label>
-          <input class="col-xs-12 form-control" type="text" placeholder="I Will Always Love You" name="q">
-          <input class="col-xs-12 btn btn-success" type="submit">
+          <input class="col-xs-12 form-control" type="text" placeholder="I Will Always Love You">
+          <input class="col-xs-12 btn btn-success" type="submit" value="Search">
         </form>
         <div id="results"></div>
       </div>
