--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form>
+          <label>Track</label>
+          <input id="track" type="track" name="q" placeholder="search tracks">
+          <input type="submit" name="submit">
+        </form>
         <div id="results"></div>
       </div>
     </div>
