search displays img, artist, album, and preview link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form>
+          <input  id="input" type="text" name="q" placeholder="Song Title" autofocus>
+          <input type="hidden" name="type" value="track">
+          <input id="search" type="submit" value="search">
+        </form>
         <div id="results"></div>
       </div>
     </div>
