--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
+
+        <form id="spotify-search">
+          <div class="form-group">
+            <input class="form-control" id="query" type="text" placeholder="Song Title" autofocus>
+          </div>
+          <div class="form group">
+            <input type="submit" class="btn btn-block btn-success" value="Search">
+          </div>
+        </form>
+        
+        <br>
         <div id="results"></div>
       </div>
     </div>
