got bonus 1 & 2 working

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 					<input type="hidden" name="type" value="album,track">
 					<input type="submit" value="Search" class="btn btn-primary">
 				</form>
+        <div class="text-center" id="loading">
+          <img src="images/loading.gif" width="80">
+        </div>
         <div id="results"></div>
       </div>
     </div>
