syntax adjustments still unable to target specific data, still working with form/ajax link

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div id="results"></div>
       </div>
     </div>
-  <form method="GET" action="https://api.spotify.com/v1/search?q=hello&type=track">
-    <input type="text" name= "track" query=hello/>
-    <input type="submit" />
+    <form method="GET" action="https://api.spotify.com/v1/search?q=hello&type=track">
+      <input type="text" name="track" q="hello" />
+    <!-- <input type="hidden" q="hello"> -->
+      <input type="submit" value="submit"/>
   </form>
-
 
 
 
