--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-5">
-        <form id='ajax'>
+        <form>
           <input name='q' type='text'>
           <input name='type' value='track' type='hidden'>
           <input type='submit'>
