--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   crossorigin="anonymous"></script>
 
   <!-- custom script -->
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/app2.js"></script>
 
 </head>
 <body>
