--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h1 class="text-center">Spotify Search</h1>
         <form>
           <label>Track</label>
-          <input id="track" type="track" name="q" placeholder="search tracks">
-          <input type="submit" name="submit">
+          <input id="track" type="track" placeholder="search tracks">
+          <input id="submit" type="submit">
         </form>
         <div id="results"></div>
       </div>
