--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-12">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
       </div>
     </div>
+    <div class="row">
+      <form>
+        <input class="col-md-12 text-center" placeholder="Search by songs" type="text" id="search">
+        <input class="btn btn-success col-md-2 col-md-offset-5 text-center" type="submit" name="search">
+      </form>
+      
+    </div>
+        <div id="results"></div>
   </div>
 </body>
 </html>
