--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <!-- jquery -->
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
- <!--  <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script> -->
+   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
   <!-- additional link to jQuery added -->
-  <script
+  <!--  <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
-
+ -->
   <!-- custom script -->
   <script type="text/javascript" src="js/app2.js"></script>
 
@@ -37,7 +37,7 @@
         <!-- search input form -->
         <div class="row col-md-6 col-md-offset-3">
           <form id="seach-form" type="submit">
-            <input type="text" id="query" class="search-text-input center-block" placeholder="Search for a track..." required>
+            <input type="text" id="query" class="search-text-input form-control" placeholder="Search for a track..." required>
             <br>
             <!-- search button -->
             <input type="submit" class="row search-button btn-block"  value="Search">
