changed 'track' to 'text'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 class="text-center">Spotify Search</h1>
         <form>
           <label>Track</label>
-          <input id="track" type="track" placeholder="search tracks">
+          <input id="track" type="text" placeholder="search tracks">
           <input id="submit" type="submit">
         </form>
         <div id="results"></div>
