added ajax example for reference

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+        <div id="results">
+          <form class="col-md-6 col-md-offset-3">
+            <input class="input-lg" type="text" name="q" placeholder="Song Title">
+            <br>
+            <input class="input-lg" type="submit" name="search" value="search">
+          </form>
+        </div>
       </div>
     </div>
   </div>
