JSON is reached and consoled

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         <div id="results"></div>
       </div>
     </div>
-    <form method="GET" action="https://api.spotify.com/v1/search?q=hello&type=track">
-      <input type="text" name="track" q="hello" />
-    <!-- <input type="hidden" q="hello"> -->
-      <input type="submit" value="submit"/>
-  </form>
-
+    <label>Search Gifs</label>
+		<!-- <input type="text" class="form-control gif-input" name="name" value="track" placeholder="tracks"> -->
+    <input type="text" class="form-control gif-input" name="q" placeholder="track">
+		<!-- <input type="hidden" name="q" value=""> -->
+    <!-- <input name="q" value=""> -->
+		<button type="submit" class="btn btn-primary">Go!</button>
+		</form>
 
 
 
