possibly making progress, maybe not, but saving it anyways.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
         <form class="form-inline">
-          <div class="search-line">
+
             <label>Search Tracks</label>
-            <input type="text" class="form-control track-input" name="q" value="party"  placeholder="search track name"><br>
-          </div>
-          <div class="find-button">
+            <input type="text" class="track-input" name="q" value="party"  placeholder="search track name"><br>
+
             <input type="submit" value="Find that song!" class="btn btn-primary">
-          </div>
         </form>
         <div id="results"></div>
       </div>
