got track titles to list on the page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
             <input type="submit" value="Find that song!" class="btn btn-primary">
         </form>
-        <div id="results"></div>
+        <div id="results">
+          <ol class="results-list">
+          </ol>
+        </div>
       </div>
     </div>
   </div>
