--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form class="form-inline">
           <div class="search-line">
             <label>Search Tracks</label>
-            <input type="text" class="track-input" name="q" value="party"  placeholder="search track name"><br>
+            <input type="text" class="track-input" name="q"  placeholder="search track name"><br>
           </div>
           <div class="submit-button">
             <input type="submit" value="Find that song!" class="btn btn-primary">
