--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
+        <form id="spotify-search">
+            <div class="form-group row">
+                <input class="form-control" id="track" type="search" placeholder="Song Title">
+            </div>
+            <div class="form-group row">
+                <input type="submit" class="btn btn-success btn-block" value="Search">
+        </div>
+        </form>
+        <div class="text-center" id="loading">
+            <img src="images/loading.gif" width="80">
+        </div>
+        <br>
         <div id="results"></div>
       </div>
     </div>
