--- a/index.html
+++ b/index.html
@@ -22,14 +22,56 @@
   <script type="text/javascript" src="js/app.js"></script>
 
 </head>
+
+
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
-      </div>
-    </div>
+
+        <!-- Search bar Spotify -->
+        <form class="spotify-search">
+
+          <label>Input Song Title</label>
+
+          <input type="search" class="form-control gif-input" name="q" value="">
+          <input type="hidden" name="type" value="track">
+          <input type="submit" value="Search" class="btn btn-primary">
+
+        </form>
+        
+
+
+
+
+        <!-- 2nd Search Box -->
+        <!-- <div class="container">
+        <input type="search" value="aaa" name="bbb">
+        <input type="submit" value="Search">
+      </div> -->
+
+
+
+      <!-- Search bar Giphy -->
+      <!-- <form class="form-inline">
+      <label>Search Gifs</label>
+      <input type="text" class="form-control gif-input" name="q" value="cats" placeholder="search gifs">
+      <input type="hidden" name="type" value="track">
+      <input type="submit" value="Go!" class="btn btn-primary">
+    </form>
+  -->
+
+
+
+
+  <div id="results"></div>
+  <div class="apiresults">
+
+
   </div>
+</div>
+</div>
+</div>
 </body>
 </html>
