--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
   <!-- jquery -->
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
@@ -37,39 +38,28 @@
 
           <input type="search" class="form-control gif-input" name="q" value="">
           <input type="hidden" name="type" value="track">
-          <input type="submit" value="Search" class="btn btn-primary">
+
+          <input type="submit" value="Search" class="btn btn-primary btn-block">
 
         </form>
-        
 
 
-
-
-        <!-- 2nd Search Box -->
-        <!-- <div class="container">
-        <input type="search" value="aaa" name="bbb">
-        <input type="submit" value="Search">
-      </div> -->
-
-
-
-      <!-- Search bar Giphy -->
-      <!-- <form class="form-inline">
-      <label>Search Gifs</label>
-      <input type="text" class="form-control gif-input" name="q" value="cats" placeholder="search gifs">
-      <input type="hidden" name="type" value="track">
-      <input type="submit" value="Go!" class="btn btn-primary">
-    </form>
-  -->
-
-
-
-
-  <div id="results"></div>
-  <div class="apiresults">
-
+  <div class="container john">
+    <!-- <div class="row"> -->
+      <div class="col-sm-6 col-md-offset-3">
+        <p>hello</p>
+      </div>
+      <div class="col-sm-6 col-md-offset-3">
+        <p>what</p>
+      </div>
+    <!-- </div> -->
 
   </div>
+
+  <!-- List of results from Spotify -->
+  <div id="results"></div>
+  <div class="apiresults"></div>
+
 </div>
 </div>
 </div>
