--- a/index.html
+++ b/index.html
@@ -13,23 +13,31 @@
 
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
   <!-- jquery -->
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
-
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
   <!-- custom script -->
   <script type="text/javascript" src="js/app.js"></script>
 
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
-      </div>
-    </div>
+      <h1>Spotify Search</h1>
+      <p>Search for a track by title.</br> Click album art for a 30" preview. </br> To play the full track, sign up for <a href="https://www.spotify.com/signup">Spotify</a>, you cheap bastard.</p>
+      <form id="search-form">
+          <input type="text" id="query" value="" class="form-control" placeholder="Type a Track Name"/>
+          <input type="submit" id="search" class="btn btn-primary" value="Search" />
+      </form>
+      <div id="results"></div>
   </div>
+  <script id="results-template" type="text/x-handlebars-template">
+      {{#each tracks.items}}
+      <div > <strong>"{{name}}"</strong>
+        <br />by<strong> {{artists.0.name}} </strong> <br/></div>
+      <div style="background-image:url({{album.images.2.url}})" data-album-id="{{id}}" class="cover"></div>
+      {{/each}}
+  </script>
 </body>
 </html>
