--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
+        <form id="spotify-search">
+            <div class="form-group">
+              <input class="form-control"id="track"placeholder="Song Title">
+            </div>
+          </form>
+          <div class="text-center"id="loading">
+            <img src="images/loading.gif" width="50">
+          </div>
+          <br>
         <div id="results"></div>
       </div>
     </div>
