need to be style with Bootstrap.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form>
+            <label for="songTitle">Song Title</label>
+            <input id="songTitle" type="text" placeholder="Song Title">
+            <button type="submit">Submit</button>
+        </form>
         <div id="results"></div>
       </div>
     </div>
