actually reflects the instructions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="col-xs-6">
           <form class="form-inline" method="GET" action="">
             <input type="text" class="form-control artist-input" name="q" value="" placeholder="Search Artists on Spotify">
-            <input type="hidden" name="type" value="artist">
+            <input type="hidden" name="type" value="track">
             <input type="submit" value="Search" class="btn btn-primary">
           </form>
         </div>
@@ -46,7 +46,7 @@
     <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <ul id="results" class="list-inline">
+      <ul id="results">
       </ul>
     </div>
   </div>
