--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <div class="row top-bar">
         <div class="col-xs-6">
-          <img class="logo" src="images/spotify-icon-25.png" height="50" width-"50">
+          <img class="logo" src="images/spotify-icon-25.png" height="50" width- "50">
           <h1 class="text-center">Spotify Search</h1>
         </div>
         <div class="col-xs-6">
@@ -43,15 +43,10 @@
     </div>
   </div>
   <div class="main">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <ul id="results">
-      </ul>
+    <div class="container" id="results">
+
     </div>
   </div>
-</div>
-</div>
 
 
 
