--- a/index.html
+++ b/index.html
@@ -26,9 +26,40 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+        <form class="search-form">
+          <input type="search-input" placeholder="Search Here">
+            <select name="type-search-query">
+              <option value="track">Track</option>
+              <option value="artist" disabled>Artist</option>
+              <option value="album" disabled>Album</option>
+              <option value="playlist" disabled>Playlist</option>
+            </select>
+          <button class='submit' type='submit'>Submit</button>
+        </form>
       </div>
     </div>
-  </div>
+    <div id="results"></div>
+
 </body>
 </html>
+
+<!--  HOW IT SHOULD LOOK after RESULTS
+
+
+    <div class="remove col-md-4">
+      <img class='album-img' src='images/albumtest.jpeg'>
+
+    <div class='playicon-div'>
+      <a href='www.google.com'><img class='playicon-img' src='images/playicon.png'></a> Artist Name | Track Title
+    </div>
+    </div>
+
+    <div class="remove col-md-4"><img class='album-img' src='images/albumtest.jpeg'>
+      <div class='playicon-div'><a href='www.google.com'><img class='playicon-img' src='images/playicon.png'></a> Artist Name | Track Title
+      </div>
+    </div>
+    <div class="remove col-md-4"><img class='album-img' src='images/albumtest.jpeg'>
+      <div class='playicon-div'><a href='www.google.com'><img class='playicon-img' src='images/playicon.png'></a> Artist Name | Track Title
+      </div>
+    </div>
+-->
