--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>Spotify Search</title>
 
   <!-- bootstrap css -->
-  <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<!--   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -24,11 +25,22 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-3"></div>
+      <div class="col-md-6" >
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+        <form class="search_form">
+        <input type="text" name="ids" placeholder="Song Title?">
+        <input type="submit" class="btn-primary" name="submitBtn">
+        </form>
       </div>
     </div>
+
+    <main>
+      <div class="row" id="results">  
+      </div>
+    </main>
+    
+
   </div>
 </body>
 </html>
