--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <div class="container jumbotron text-center">
           <h1>Spotify Search</h1>
-          <form>
+          <form id="spSearch">
             <div class="form-group row">
               <input type="search" id="qName" class="form-input" name="q" placeholder="Search Spotify..." value="">
             </div>
