--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form>
+          <input type="text" placeholder="Search for track...">
+          <input type="submit" value="Search">
+        </form>
         <div id="results"></div>
       </div>
     </div>
