more logic/styling

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
             <button type="submit" name="subSearch" class="butt btn-success btn-lg btn-primary round">Search</button>
           </form>
         </div>
-        <div id="results">
-
+        <div class="resTitleDiv">
+          <h2 id="resTitle" class="text-center">Top 20</h2>
+        </div>
+        <div id="results" class="container">
         </div>
       </div>
     </div>
