--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form id="searchForm">
+          <input type="search" id="mySpotifySearch" type="text" placeholder="Search for Artist">
+          <button id="search" type="submit">Search</button>
+        </form>
         <div id="results"></div>
       </div>
     </div>
