--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="col-md-6" >
         <h1 class="text-center">Spotify Search</h1>
         <form class="search_form">
-        <input type="text" name="ids" placeholder="Song Title?">
+        <input type="text" name="ids" placeholder="Song Title or Artist">
         <input type="submit" class="btn-primary" name="submitBtn">
         </form>
       </div>
