--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <form class="input-form" method="post">
+          <input class="input" type="text" placeholder="Song Title" value="">
+          <input class="submit-button" type="submit" name="" value="Search">
+        </form>
       </div>
     </div>
   </div>
+
+  <div class="">
+    <div id="results"></div>
+  </div>
+
+  <img class="loading hide" src="images/loading.gif" alt="loading">
+
 </body>
 </html>
