--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <input type="search" id="mySpotifySearch" type="text" placeholder="Search for Artist">
           <button id="search" type="submit">Search</button>
         </form>
-        <div id="results"></div>
+        <div id="results" class="container" class="col-md-offset-4"></div>
       </div>
     </div>
   </div>
