--- a/index.html
+++ b/index.html
@@ -22,11 +22,19 @@
 
 </head>
 <body>
+  <form>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
+          <input type='search' onclick="return placeholder" placeholder="Search for a song" size=60px></br>
+          <input type=submit>
+          <div class="results">
+            <div id="results"></div>
+            <div id="artistImage"></div>
+        </div>
+        <!-- <button class="preview" id="play">Preview</button> -->
+      </form>
       </div>
     </div>
   </div>
